2012-10-25  Zoltan Tuza <zoltuz@zoltuz-laptop>

	* txtl_rnap_rnap28.m: added an option for modified NTP utilization 
	model to avoid high reaction order
	* txtl_rnap_rnap70.m: added an option modified NTP utilization 
	model to avoid high reaction order
	* txtl_adddna.m: added an optional model for AA utilization
	* txtl_setup_parameters.m: new parameters for the reactions in the 
	new NTP and AA utilization model

2012-10-22  Zoltan Tuza <zoltuz@zoltuz-laptop>
	* txtl_prom_p28.m: modification in the reaction modeling
	* txtl_prom_p28_ptet.m: modification in the reaction modeling
	* txtl_protein_tetR.m: tetramerization is taken out
	* txtl_protein_sigma28.m: reverse reaction is adjusted to RNAP70's reaction rate 
	* incoherent_ff_loop.m: implementation of incoherent ff_loop based on Zach's circuit
	* txtl_rnap_rnap28.m: added: TX file for RNAP28 complex

2012-10-18  Zoltan Tuza <zoltuz@zoltuz-laptop>
	* txtl_combine.m: carrying the name of the tubes using it as 
	a window name in txtl_plot.
	* txtl_plot.m: bugfix, handle non existing species in total 
	concentration. Window name is given by the tubename
	* concurentSigmaFactors.m: simulating two circuits at once.
	* txtl_rnap_ranp70.m: modification for combinatorial promoter
	* txtl_prom_p28.m: added sigma28 promoter
	* txtl_prom_p28_ptet.m: added combinatorial promoter
	* combinatorial_promoter.m: added example file for combinatorial
	promoter.
2012-10-15  Zoltan Tuza <zoltuz@zoltuz-laptop>

	* via SF shell access: svn post-commit script has been added 

2012-10-07  Zoltan Tuza <zoltuz@zoltuz-laptop>

	* txtl_combine: bugfix, to carry UserData during mixing
	* txtl_plot: improved calculation of total concentration
	* txtl_setupparameters: new config file to handle core parameters
	at one place. (many other files have been adjusted becouse of that)

2012-10-07  Richard Murray  <murray@altura.local>

	* txtl_dna.m: removed this file, since its functionality is replaced
	by txtl_adddna()
