@@ -12,32 +12,32 @@ tube2 = txtl_buffer('b1');
 % Set up a tube that will contain our DNA
 tube3 = txtl_newtube('circuit_notetR');
 txtl_adddna(tube3, ...
-    'p70(50)', 'rbs(20)', 'sigma28(600)', 3, 'linear');
+    'p70(50)', 'rbs(20)', 'sigma28(600)', 50, 'linear');
 txtl_adddna(tube3, ...
-    'p28_ptet(150)', 'rbs(20)', 'deGFP(1000)-lva-terminator', 3, 'linear');
+    'p28_ptet(150)', 'rbs(20)', 'deGFP(1000)-lva-terminator', 50, 'linear');
 txtl_adddna(tube3, ...
-'p70(50)', 'rbs(20)', 'gamS(1000)', 1, 'plasmid');
+'p70(50)', 'rbs(20)', 'gamS(1000)', 20, 'plasmid');
 
 
 tube4 = txtl_newtube('circuit_with_tetR');
 txtl_adddna(tube4, ...
-    'p70(50)', 'rbs(20)', 'tetR(600)', 3, 'linear');
+    'p70(50)', 'rbs(20)', 'tetR(600)', 30, 'linear');
 txtl_adddna(tube4, ...
-    'p70(50)', 'rbs(20)', 'sigma28(600)', 3, 'linear');
+    'p70(50)', 'rbs(20)', 'sigma28(600)', 50, 'linear');
 txtl_adddna(tube4, ...
-    'p28_ptet(150)', 'rbs(20)', 'deGFP(1000)-lva-terminator', 3, 'linear');
+    'p28_ptet(150)', 'rbs(20)', 'deGFP(1000)-lva-terminator', 50, 'linear');
 txtl_adddna(tube4, ...
-'p70(50)', 'rbs(20)', 'gamS(1000)', 1, 'plasmid');
+'p70(50)', 'rbs(20)', 'gamS(1000)', 30, 'plasmid');
 
 
 % Mix the contents of the individual tubes
 well_a1 = txtl_combine([tube1, tube2, tube3], [10, 8, 1]);
 protein = well_a1.Species(findspecies(well_a1,'protein deGFP-lva-terminator*'));
 protein.UserData = 500 / 3;
-degradationRate = [2 0.01 1]; % !TODO: Find a reasonable value
+degradationRate = [0.01 0.001 1]; % !TODO: Find a reasonable value
 Rlist = txtl_protein_degradation(well_a1, protein,degradationRate);
 
-txtl_setup_parameters(well_a1);
+
 
 % set up well_b1
 well_b1 = txtl_combine([tube1, tube2, tube4], [10, 8, 1]);
@@ -45,7 +45,7 @@ protein_b = well_b1.Species(findspecies(well_b1,'protein deGFP-lva-terminator*')
 protein_b.UserData = 500 / 3;
 Rlist = txtl_protein_degradation(well_b1, protein_b,degradationRate);
 
-txtl_setup_parameters(well_b1);
+
 
 
  
@@ -56,7 +56,7 @@ set(configsetObj, 'SolverType', 'ode23s');
 set(configsetObj, 'StopTime', simulationTime);
 
 % 1st run
-[x_ode,t_ode] = txtl_runsim(well_a1,configsetObj,[],[]);
+[t_ode,x_ode] = txtl_runsim('basic',well_a1,configsetObj,[],[]);
 
 
 configsetObj_b1 = getconfigset(well_b1, 'active');
@@ -65,7 +65,7 @@ set(configsetObj_b1, 'SolverType', 'ode23s');
 set(configsetObj_b1, 'StopTime', simulationTime);
 
 
-[x_ode_b1,t_ode_b1] = txtl_runsim(well_b1,configsetObj_b1,[],[]);
+[t_ode_b1,x_ode_b1] = txtl_runsim('basic',well_b1,configsetObj_b1,[],[]);
 
 
 %% plot the result
@@ -78,7 +78,7 @@ dataGroups{1,3} = {'b-','r-','b--','r--','y-','c-','g-','g--'};
 
 % Gene Expression Plot
 dataGroups{2,1} = 'Gene Expression';
-dataGroups{2,2} = {'protein deGFP-lva-terminator*'}%,'protein tetRtetramer'};
+dataGroups{2,2} = {'protein deGFP-lva-terminator*'};%,'protein tetRtetramer'};
 %dataGroups{2,3} = {'b-','g--','g-','r-','b--','b-.'};
 
 % Resource Plot
